@@ -1,3 +1,14 @@
+Wed Jan 29 15:43:56 2003  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtkmenushell.c (gtk_real_menu_shell_move_current):
+	Make up from the menu bar go to the end of the submenu.
+	(#96114, Ian Peters.)
+
+	* gtk/gtkmenuitem.c (gtk_menu_item_mnemonic_activate): 
+	Only do the select-but-not-activate stuff if the
+	menu is already active. Otherwise, just activate.
+	(#101690, Arvind Samptur)
+
 Tue Jan 28 15:18:24 2003  Owen Taylor  <otaylor@redhat.com>
 
 	* autogen.sh (have_automake): Fix version in complaint
